--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -22,8 +22,8 @@ body {
 .splash-screen {
   font-size: 12px;
   font-family: 'Times New Roman', Times, serif;
-  background: #fefefe;
-  color: #000;
+  background: #000;
+  color: #fff;
   transition:
     color ease-out 0.2s,
     background-color ease-out 0.2s;
