--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -28,12 +28,16 @@ body {
     color ease-out 0.2s,
     background-color ease-out 0.2s;
   user-select: none;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   padding: 4em;
   text-align: center;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 
   a {
     color: inherit;
@@ -74,6 +78,14 @@ body {
     word-spacing: 0.35em;
     text-transform: uppercase;
     transform: scale(1, 1.5);
+
+    &::before {
+      content: '— ';
+    }
+
+    &::after {
+      content: ' —';
+    }
   }
 
   > .link {
