--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -34,10 +34,7 @@ body {
   padding: 4em;
   text-align: center;
   position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+  inset: 0;
 
   a {
     color: inherit;
